--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Play game.swf with Ruffle</title>
-  <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+  <meta charset="UTF-8">
+  <title>Flash Game</title>
+  <script src="ruffle/ruffle.js"></script>
   <style>
-    body {
-      background-color: #111;
-      color: white;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      padding-top: 40px;
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      background-color: black;
     }
 
     ruffle-player {
-      width: 800px;
-      height: 600px;
-      margin: auto;
+      width: 100vw;
+      height: 100vh;
       display: block;
-      border: 2px solid #444;
     }
   </style>
 </head>
 <body>
-  <h1>Flash Game Loader</h1>
-  <ruffle-player src="game.swf"></ruffle-player>
+  <ruffle-player src="game.swf" autoplay="on" allowfullscreen="true"></ruffle-player>
 </body>
 </html>
